<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Holo Goo.gl</string>
    <string name="title_url_detail">URL Detail</string>
    <string name="title_activity_urlshare_controller">URLShareController</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_shorten_urlresult">Shortened URL</string>
    <string name="hello_world">Hello world!</string>
    <string name="shortening_url_dialog">Shortening your URL…</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="shorten_new_URL">Shorten New URL</string>
    <string name="refresh_url_list">Refresh URL List</string>
    <string name="refresh_metrics">Refresh Metrics</string>
    <string name="URLShortenerService">URL Shortener Service</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="logout">Logout</string>
    <string name="hint_weburl">Type or paste a URL here</string>
    <string name="crash_toast_text">App crashed, compiling report</string>
    <string name="crash_dialog_text">Would you like to send a crash report? It really helps me make
        the app better!
    </string>
    <string name="crash_dialog_title">Oh no!</string>
    <string name="crash_dialog_ok_toast">Thanks!</string>
    <string name="crash_dialog_comment_prompt">Add any comments here (what you were doing, etc)</string>
    <string name="about">About</string>

</resources>
