<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/login"
            android:showAsAction="never"
            android:title="@string/login"/>
    <item
            android:id="@+id/logout"
            android:showAsAction="never"
            android:title="@string/logout"/>
    <item
            android:id="@+id/shorten_new_URL"
            android:title="@string/shorten_new_URL"
            android:icon="@drawable/ic_menu_content_new"
            android:showAsAction="ifRoom" />
    <!--<item-->
            <!--android:id="@+id/refresh_url_list"-->
            <!--android:title="@string/refresh_url_list"-->
            <!--android:icon="@drawable/ic_menu_navigation_refresh"-->
            <!--android:orderInCategory="1"-->
            <!--android:showAsAction="always" />-->
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:showAsAction="never"/>

    <item
        android:id="@+id/send_feedback"
        android:title="@string/send_feedback"
        android:showAsAction="never" />

    <item
            android:id="@+id/action_settings"
            android:showAsAction="never"
            android:title="@string/action_settings"/>
</menu>