<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ShortenURLResult">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/shortenedURL"
            android:clickable="false"
            android:linksClickable="true"
            android:textColor="#0099cc"
            android:textIsSelectable="true"
            android:typeface="serif"
            android:textSize="30sp"
            android:autoLink="web"
            android:text=""
            android:layout_below="@+id/URL_shortening_status"
            android:layout_centerHorizontal="true"/>

    <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/URL_shortening_progressBar"
            android:layout_below="@+id/shortenedURL"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/shortening_url_dialog"
            android:id="@+id/URL_shortening_status"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:typeface="sans"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:id="@+id/copy_URL_button"
            android:textSize="25sp"
            android:layout_alignTop="@+id/share_URL_button"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:id="@+id/share_URL_button"
            android:textSize="25sp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

</RelativeLayout>
